9- Deployment-Strategy/Canary/Service-app-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-canary-service
spec:
  selector:
    app: app
    version: canary
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
